# Grade-Na-Hora-UTFPR

./: README.md  pyproject.toml
UTFPR_Grade_Builder/: .env.example  .gitignore  README.md  requirements.txt
UTFPR_Grade_Builder/src/: __init__.py  app.py
UTFPR_Grade_Builder/src/core/: __init__.py  export_png.py  models.py  schedule.py  state.py  storage.py
UTFPR_Grade_Builder/src/infra/: __init__.py  cancel_token.py  logger.py  scraper_async.py  selectors.py
UTFPR_Grade_Builder/src/ui/: __init__.py  grade_panel.py  login_panel.py  main_window.py  report_dialog.py  styles.py  turmas_panel.py
UTFPR_Grade_Builder/tests/: conftest.py  test_schedule_conflicts.py  test_schedule_parser.py  test_smoke_turmas_abertas.py
sample_data/: turmas_abertas.sample.json
src/: main.py
src/domain/: grade_model.py  models.py  parser_horario.py
src/ui/: app.py  theme.py
tests/: test_parser_horario.py
